Hide email fixes

--- a/libs/user/src/lib/auth/components/hide-email/hide-email.component.html
+++ b/libs/user/src/lib/auth/components/hide-email/hide-email.component.html
@@ -1,6 +1,6 @@
-<mat-slide-toggle [formControl]="control">Hide my email</mat-slide-toggle>
+<mat-slide-toggle test-id="hide-email" [formControl]="form">Hide my email</mat-slide-toggle>
 <p class="mat-caption">Your email address will be visible to all Archipel users unless you decide to hide it.</p>
 <p class="mat-caption">
   NB: Please note that in the event that you interact with a sales agent or their film(s), your email will be made visible to them regardless. 
-  For more information, please refer to our Privacy Policy.
+  For more information, please refer to our <a href="/auth/privacy" target="_blank">Privacy Policy</a>.
 </p>
