--- a/libs/user/src/lib/auth/forms/profile/profile.component.html
+++ b/libs/user/src/lib/auth/forms/profile/profile.component.html
@@ -26,7 +26,7 @@
       <input matInput test-id="phone-form" placeholder="Email Address" type="tel" [formControl]="form.get('email')" />
     </mat-form-field>
 
-    <hide-email [control]="form.get('hideEmail')"></hide-email>
+    <user-hide-email [form]="form.get('hideEmail')"></user-hide-email>
 
     <mat-form-field appearance="outline">
       <mat-label>Phone Number</mat-label>
