--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -21,7 +21,7 @@
           </mat-error>
         </mat-form-field>
 
-        <hide-email [control]="form.get('hideEmail')"></hide-email>
+        <user-hide-email [form]="form.get('hideEmail')"></user-hide-email>
 
         <article fxFlex fxLayout="row" fxLayoutGap="24px" fxLayout.lt-md="column">
           <mat-form-field appearance="outline">
