--- a/apps/festival/festival/src/app/marketplace/title/view/view.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/view/view.component.html
@@ -12,7 +12,7 @@
           <ng-container *ngIf="(eventId$ | async) === null">
             <event-request-screening [movieId]="movie.id"></event-request-screening>
           </ng-container>
-          <button mat-button class="translucent" [disabled]="requestSent" (click)="requestAskingPrice(movie.id)">
+          <button mat-button class="translucent" [disabled]="requestSent" (click)="requestAskingPrice(movie.id)" matTooltip="Request Asking Price">
             <mat-icon svgIcon="local_offer"></mat-icon>
             <span fxHide.lt-md>Request Asking Price</span>
           </button>
