--- a/apps/festival/festival/src/app/marketplace/title/view/view.component.scss
+++ b/apps/festival/festival/src/app/marketplace/title/view/view.component.scss
@@ -8,6 +8,10 @@ movie-header-cta {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   }
 
+  .buttons {
+    display: flex;
+  }
+  
   section {
     gap: 16px;
 
