Update htmls and styles files

--- a/apps/festival/festival/src/app/marketplace/event/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/event/list/list.component.html
@@ -1,4 +1,4 @@
-<list-page [items]="events$ | async | eventsToTimeFrame" exportButton>
+<list-page [items]="events$ | async | eventsToTimeFrame">
   <list-page-title>
     <h1 class="mat-display-2 page-title">Screening List</h1>
   </list-page-title>
