--- a/apps/festival/festival/src/app/marketplace/organization/list/list.component.scss
+++ b/apps/festival/festival/src/app/marketplace/organization/list/list.component.scss
@@ -12,6 +12,10 @@ list-filter {
   padding-bottom: 24px;
 }
 
+list-page-description {
+  margin: 24px;
+}
+
 .loading {
   width: 100%;
   display: flex;
