--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -1,4 +1,4 @@
-<list-page [items]="movies$ | async" exportButton>
+<list-page [items]="movies$ | async">
 
   <!-- App Bar Search -->
   <list-page-app-bar>
