--- a/apps/financiers/financiers/src/app/marketplace/organization/list/list.component.scss
+++ b/apps/financiers/financiers/src/app/marketplace/organization/list/list.component.scss
@@ -11,6 +11,10 @@ list-filter {
   justify-content: center;
 }
 
+list-page-description {
+  margin: 24px;
+}
+
 .loading {
   width: 100%;
   display: flex;
