--- a/apps/festival/festival/src/app/marketplace/event/list/list.component.scss
+++ b/apps/festival/festival/src/app/marketplace/event/list/list.component.scss
@@ -10,6 +10,10 @@ mat-divider {
   margin-bottom: 16px;
 }
 
+list-page-description {
+  margin: 24px;
+}
+
 .loading {
   width: 100%;
   display: flex;
