--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -68,19 +68,14 @@
     </ng-container>
 
     <section class="surface">
-      <h3>
-        <mat-icon svgIcon="movie_open"></mat-icon>
-        <span>Buyers' Insights</span>
-      </h3>
       <analytics-map class="map-insights" [data]="activeCountries$ | async" [topCount]="5" horizontal showLegend selectable>
-        <ng-template #header let-selected="selected" let-resetSelected="resetSelected">
-          <button mat-icon-button *ngIf="selected" (click)="resetSelected(selected)" matTooltip="Remove selection">
-            <mat-icon svgIcon="refresh_filters"></mat-icon>
-          </button>
-        </ng-template>
+        <h3>
+          <mat-icon svgIcon="movie_open"></mat-icon>
+          <span>Buyers' Insights</span>
+        </h3>
       </analytics-map>
 
-      <h3>Most active buyers in the world</h3>
+      <h3>Most active buyers</h3>
       <bf-table [source]="activeBuyers$ | async" clickable useFilter pagination="5">
         <ng-template colRef="user" label="Name" let-item sort>
           <b>{{ item | displayName }}</b>
