--- a/libs/analytics/src/lib/components/map/map.component.scss
+++ b/libs/analytics/src/lib/components/map/map.component.scss
@@ -18,6 +18,17 @@ section {
   width: 100%;
 }
 
+.map-wrapper{
+  width: 100%;
+  flex: 1 1 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin-bottom: 24px;
+  position: relative;
+}
+
 img {
   width: 100%;
 }
