fix review part2: put mat-icon-button, removed functions 'hidePassword'

--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -10,7 +10,9 @@
       [type]="hideNewPassword ? 'password' : 'text'"
       required
     />
-    <mat-icon matSuffix svgIcon="visibility" (click)=newPasswordVisibility() matTooltip="{{ hideNewPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+    <button matSuffix mat-icon-button (click)="hideNewPassword = !hideNewPassword" [matTooltip]="hideNewPassword ? 'Show Password' : 'Hide Password'">
+      <mat-icon svgIcon="visibility"></mat-icon>
+    </button>
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
       New password is <strong>required</strong>.
@@ -34,7 +36,9 @@
       [type]="hideConfirmationPassword ? 'password' : 'text'"
       required
     />
-    <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility() matTooltip="{{ hideConfirmationPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+    <button matSuffix mat-icon-button (click)="hideConfirmationPassword = !hideConfirmationPassword" [matTooltip]="hideConfirmationPassword ? 'Show Password' : 'Hide Password'">
+      <mat-icon svgIcon="visibility"></mat-icon>
+    </button>
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
       New password confirmation is <strong>required</strong>.
