--- a/apps/festival/festival/src/app/event/login/login.component.html
+++ b/apps/festival/festival/src/app/event/login/login.component.html
@@ -21,7 +21,9 @@
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
       <input test-id="password" matInput type="password" placeholder="Password" formControlName="password" required [type]="hidePassword ? 'password' : 'text'"/>
-      <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility() matTooltip="{{ hidePassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+      <button matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+        <mat-icon svgIcon="visibility"></mat-icon>
+      </button>
       <mat-error *ngIf="form.get('password').hasError('required')">
         Password is <strong>required</strong> 
       </mat-error>
