--- a/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
+++ b/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
@@ -15,7 +15,9 @@
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
         <input matInput type="password" placeholder="Password" formControlName="password" required test-id="password" [type]="hidePassword ? 'password' : 'text'"/>
-        <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility() matTooltip="{{ hidePassword ?  'Show Password' : 'Hide Password' }}"></mat-icon>
+        <button matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'"> 
+          <mat-icon svgIcon="visibility_off"></mat-icon>
+        </button>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="signinForm.get('password').hasError('minlength')">
           Password with less than <strong>6</strong> characters.
