--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -12,9 +12,11 @@
           type="password"
           placeholder="Current Password"
           formControlName="current"
-          [type]="hideCurrentPassword ? 'password' : 'text'"
+          [type]="this.passwordState.current ? 'password' : 'text'"
         />
-      <mat-icon matSuffix svgIcon="visibility" (click)=currentPasswordVisibility() matTooltip="{{ hideCurrentPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+      <button matSuffix mat-icon-button (click)="this.passwordState.current = !this.passwordState.current" [matTooltip]="this.passwordState.current ? 'Show Password' : 'Hide Password'">
+        <mat-icon svgIcon="visibility"></mat-icon>
+      </button>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>New Password</mat-label>
@@ -25,10 +27,12 @@
           placeholder="New Password"
           formControlName="next"
           [errorStateMatcher]="currentPasswordMatch"
-          [type]="hideNewPassword ? 'password' : 'text'"
+          [type]="this.passwordState.new ? 'password' : 'text'"
           required
         />
-        <mat-icon matSuffix svgIcon="visibility" (click)=newPasswordVisibility() matTooltip="{{ hideNewPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+        <button matSuffix mat-icon-button (click)="this.passwordState.new = !this.passwordState.new" [matTooltip]="this.passwordState.new ? 'Show Password' : 'Hide Password'">
+          <mat-icon svgIcon="visibility"></mat-icon>
+        </button>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
           New password is <b>required</b>.
@@ -52,10 +56,12 @@
           placeholder="New Password Confirmation"
           formControlName="confirm"
           [errorStateMatcher]="passwordsMatcher"
-          [type]="hideConfirmationPassword ? 'password' : 'text'"
+          [type]="this.passwordState.confirm ? 'password' : 'text'"
           required
         />
-        <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility() matTooltip="{{ hideConfirmationPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+        <button matSuffix mat-icon-button (click)="this.passwordState.confirm = !this.passwordState.confirm" [matTooltip]="this.passwordState.confirm ? 'Show Password' : 'Hide Password'">
+          <mat-icon svgIcon="visibility"></mat-icon>
+        </button>
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
           New password confirmation is <b>required</b>.
