--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -103,9 +103,11 @@
             [errorStateMatcher]="currentPasswordMatch"
             required
             test-id="password"
-            [type]="hidePassword ? 'password' : 'text'"
+            [type]="this.passwordState.new ? 'password' : 'text'"
           />
-          <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility() matTooltip="{{ hidePassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+          <button matSuffix mat-icon-button (click)="this.passwordState.new = !this.passwordState.new" [matTooltip]="this.passwordState.new ? 'Show Password' : 'Hide Password'">
+            <mat-icon svgIcon="visibility"></mat-icon>
+          </button>
           <mat-hint>Between 6 and 24 characters.</mat-hint>
           <mat-error *ngIf="form.get('password').hasError('required')">
             New password is <strong>required</strong>.
@@ -130,9 +132,11 @@
             [errorStateMatcher]="passwordsMatcher"
             required
             test-id="password-confirm"
-            [type]="hideConfirmationPassword ? 'password' : 'text'"
+            [type]="this.passwordState.confirm ? 'password' : 'text'"
           />
-          <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility() matTooltip="{{ hideConfirmationPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
+          <button matSuffix mat-icon-button (click)="this.passwordState.confirm = !this.passwordState.confirm" [matTooltip]="this.passwordState.confirm ? 'Show Password' : 'Hide Password'">
+            <mat-icon svgIcon="visibility"></mat-icon>
+          </button>
           <mat-hint>Please rewrite your password for confirmation.</mat-hint>
           <mat-error *ngIf="form.get('confirm').hasError('required')">
             New password confirmation is <strong>required</strong>.
