--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -15,7 +15,8 @@
           [type]="this.passwordState.current ? 'password' : 'text'"
         />
       <button matSuffix mat-icon-button (click)="this.passwordState.current = !this.passwordState.current" [matTooltip]="this.passwordState.current ? 'Show Password' : 'Hide Password'">
-        <mat-icon svgIcon="visibility"></mat-icon>
+        <mat-icon *ngIf="!this.passwordState.current" svgIcon="visibility_off"></mat-icon>
+        <mat-icon *ngIf="this.passwordState.current" svgIcon="visibility"></mat-icon>
       </button>
       </mat-form-field>
       <mat-form-field appearance="outline">
@@ -31,7 +32,8 @@
           required
         />
         <button matSuffix mat-icon-button (click)="this.passwordState.new = !this.passwordState.new" [matTooltip]="this.passwordState.new ? 'Show Password' : 'Hide Password'">
-          <mat-icon svgIcon="visibility"></mat-icon>
+          <mat-icon *ngIf="!this.passwordState.new" svgIcon="visibility_off"></mat-icon>
+          <mat-icon *ngIf="this.passwordState.new" svgIcon="visibility"></mat-icon>
         </button>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
@@ -60,7 +62,8 @@
           required
         />
         <button matSuffix mat-icon-button (click)="this.passwordState.confirm = !this.passwordState.confirm" [matTooltip]="this.passwordState.confirm ? 'Show Password' : 'Hide Password'">
-          <mat-icon svgIcon="visibility"></mat-icon>
+          <mat-icon *ngIf="!this.passwordState.confirm" svgIcon="visibility_off"></mat-icon>
+          <mat-icon *ngIf="this.passwordState.confirm" svgIcon="visibility"></mat-icon>
         </button>
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
