--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -11,7 +11,8 @@
       required
     />
     <button matSuffix mat-icon-button (click)="hideNewPassword = !hideNewPassword" [matTooltip]="hideNewPassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon svgIcon="visibility"></mat-icon>
+      <mat-icon *ngIf="!hideNewPassword" svgIcon="visibility_off"></mat-icon>
+      <mat-icon *ngIf="hideNewPassword" svgIcon="visibility"></mat-icon>
     </button>
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
@@ -37,7 +38,8 @@
       required
     />
     <button matSuffix mat-icon-button (click)="hideConfirmationPassword = !hideConfirmationPassword" [matTooltip]="hideConfirmationPassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon svgIcon="visibility"></mat-icon>
+      <mat-icon *ngIf="!hideConfirmationPassword" svgIcon="visibility_off"></mat-icon>
+      <mat-icon *ngIf="hideConfirmationPassword" svgIcon="visibility"></mat-icon>
     </button>
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
