--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -12,11 +12,11 @@
           type="password"
           placeholder="Current Password"
           formControlName="current"
-          [type]="this.passwordState.current ? 'password' : 'text'"
+          [type]="passwordState.current ? 'password' : 'text'"
         />
-      <button matSuffix mat-icon-button (click)="this.passwordState.current = !this.passwordState.current" [matTooltip]="this.passwordState.current ? 'Show Password' : 'Hide Password'">
-        <mat-icon *ngIf="!this.passwordState.current" svgIcon="visibility_off"></mat-icon>
-        <mat-icon *ngIf="this.passwordState.current" svgIcon="visibility"></mat-icon>
+      <button matSuffix mat-icon-button (click)="passwordState.current = !passwordState.current" [matTooltip]="passwordState.current ? 'Show Password' : 'Hide Password'">
+        <mat-icon *ngIf="!passwordState.current" svgIcon="visibility_off"></mat-icon>
+        <mat-icon *ngIf="passwordState.current" svgIcon="visibility"></mat-icon>
       </button>
       </mat-form-field>
       <mat-form-field appearance="outline">
@@ -28,12 +28,12 @@
           placeholder="New Password"
           formControlName="next"
           [errorStateMatcher]="currentPasswordMatch"
-          [type]="this.passwordState.new ? 'password' : 'text'"
+          [type]="passwordState.new ? 'password' : 'text'"
           required
         />
-        <button matSuffix mat-icon-button (click)="this.passwordState.new = !this.passwordState.new" [matTooltip]="this.passwordState.new ? 'Show Password' : 'Hide Password'">
-          <mat-icon *ngIf="!this.passwordState.new" svgIcon="visibility_off"></mat-icon>
-          <mat-icon *ngIf="this.passwordState.new" svgIcon="visibility"></mat-icon>
+        <button matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
+          <mat-icon *ngIf="!passwordState.new" svgIcon="visibility_off"></mat-icon>
+          <mat-icon *ngIf="passwordState.new" svgIcon="visibility"></mat-icon>
         </button>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
@@ -58,12 +58,12 @@
           placeholder="New Password Confirmation"
           formControlName="confirm"
           [errorStateMatcher]="passwordsMatcher"
-          [type]="this.passwordState.confirm ? 'password' : 'text'"
+          [type]="passwordState.confirm ? 'password' : 'text'"
           required
         />
-        <button matSuffix mat-icon-button (click)="this.passwordState.confirm = !this.passwordState.confirm" [matTooltip]="this.passwordState.confirm ? 'Show Password' : 'Hide Password'">
-          <mat-icon *ngIf="!this.passwordState.confirm" svgIcon="visibility_off"></mat-icon>
-          <mat-icon *ngIf="this.passwordState.confirm" svgIcon="visibility"></mat-icon>
+        <button matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
+          <mat-icon *ngIf="!passwordState.confirm" svgIcon="visibility_off"></mat-icon>
+          <mat-icon *ngIf="passwordState.confirm" svgIcon="visibility"></mat-icon>
         </button>
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
