optimization of variable

--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -7,12 +7,12 @@
       type="password"
       placeholder="New Password"
       formControlName="password"
-      [type]="hideNewPassword ? 'password' : 'text'"
+      [type]="passwordState.new ? 'password' : 'text'"
       required
     />
-    <button matSuffix mat-icon-button (click)="hideNewPassword = !hideNewPassword" [matTooltip]="hideNewPassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon *ngIf="!hideNewPassword" svgIcon="visibility_off"></mat-icon>
-      <mat-icon *ngIf="hideNewPassword" svgIcon="visibility"></mat-icon>
+    <button matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
+      <mat-icon *ngIf="!passwordState.new" svgIcon="visibility_off"></mat-icon>
+      <mat-icon *ngIf="passwordState.new" svgIcon="visibility"></mat-icon>
     </button>
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
@@ -34,12 +34,12 @@
       placeholder="New Password Confirmation"
       formControlName="confirm"
       [errorStateMatcher]="passwordsMatcher"
-      [type]="hideConfirmationPassword ? 'password' : 'text'"
+      [type]="passwordState.confirm ? 'password' : 'text'"
       required
     />
-    <button matSuffix mat-icon-button (click)="hideConfirmationPassword = !hideConfirmationPassword" [matTooltip]="hideConfirmationPassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon *ngIf="!hideConfirmationPassword" svgIcon="visibility_off"></mat-icon>
-      <mat-icon *ngIf="hideConfirmationPassword" svgIcon="visibility"></mat-icon>
+    <button matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
+      <mat-icon *ngIf="!passwordState.confirm" svgIcon="visibility_off"></mat-icon>
+      <mat-icon *ngIf="passwordState.confirm" svgIcon="visibility"></mat-icon>
     </button>
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
