Added type 'button'

--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -14,7 +14,7 @@
           formControlName="current"
           [type]="passwordState.current ? 'password' : 'text'"
         />
-      <button matSuffix mat-icon-button (click)="passwordState.current = !passwordState.current" [matTooltip]="passwordState.current ? 'Show Password' : 'Hide Password'">
+      <button type="button" matSuffix mat-icon-button (click)="passwordState.current = !passwordState.current" [matTooltip]="passwordState.current ? 'Show Password' : 'Hide Password'">
         <mat-icon *ngIf="!passwordState.current" svgIcon="visibility_off"></mat-icon>
         <mat-icon *ngIf="passwordState.current" svgIcon="visibility"></mat-icon>
       </button>
@@ -31,7 +31,7 @@
           [type]="passwordState.new ? 'password' : 'text'"
           required
         />
-        <button matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
+        <button type="button" matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
           <mat-icon *ngIf="!passwordState.new" svgIcon="visibility_off"></mat-icon>
           <mat-icon *ngIf="passwordState.new" svgIcon="visibility"></mat-icon>
         </button>
@@ -61,7 +61,7 @@
           [type]="passwordState.confirm ? 'password' : 'text'"
           required
         />
-        <button matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
+        <button type="button" matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
           <mat-icon *ngIf="!passwordState.confirm" svgIcon="visibility_off"></mat-icon>
           <mat-icon *ngIf="passwordState.confirm" svgIcon="visibility"></mat-icon>
         </button>
