--- a/apps/festival/festival/src/app/event/login/login.component.html
+++ b/apps/festival/festival/src/app/event/login/login.component.html
@@ -21,7 +21,7 @@
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
       <input test-id="password" matInput type="password" placeholder="Password" formControlName="password" required [type]="hidePassword ? 'password' : 'text'"/>
-      <button matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+      <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
         <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
         <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
       </button>
