--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -10,7 +10,7 @@
       [type]="passwordState.new ? 'password' : 'text'"
       required
     />
-    <button matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
+    <button type="button" matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
       <mat-icon *ngIf="!passwordState.new" svgIcon="visibility_off"></mat-icon>
       <mat-icon *ngIf="passwordState.new" svgIcon="visibility"></mat-icon>
     </button>
@@ -37,7 +37,7 @@
       [type]="passwordState.confirm ? 'password' : 'text'"
       required
     />
-    <button matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
+    <button type="button" matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
       <mat-icon *ngIf="!passwordState.confirm" svgIcon="visibility_off"></mat-icon>
       <mat-icon *ngIf="passwordState.confirm" svgIcon="visibility"></mat-icon>
     </button>
