--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -68,7 +68,15 @@
     </ng-container>
 
     <section class="surface">
-      <analytics-map class="map-insights" [data]="activeCountries$ | async" [topCount]="5" horizontal showLegend selectable>
+      <analytics-map
+        class="map-insights"
+        [data]="activeCountries$ | async"
+        [topCount]="5"
+        (selection)="territorySelected($event)"
+        horizontal
+        showLegend
+        selectable
+      >
         <h3>
           <mat-icon svgIcon="movie_open"></mat-icon>
           <span>Buyers' Insights</span>
@@ -76,7 +84,12 @@
       </analytics-map>
 
       <h3>Most active buyers</h3>
-      <bf-table [source]="activeBuyers$ | async" clickable useFilter pagination="5">
+      <bf-table
+        [source]="activeBuyers$ | async | filterBy : selectedTerritory"
+        clickable
+        useFilter
+        pagination="5"
+      >
         <ng-template colRef="user" label="Name" let-item sort>
           <b>{{ item | displayName }}</b>
         </ng-template>
