--- a/apps/festival/festival/src/app/marketplace/organization/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/list/list.component.html
@@ -16,7 +16,7 @@
     <mat-form-field appearance="outline" [formGroup]="searchForm">
       <mat-label>Search for a sales company...</mat-label>
       <mat-icon matPrefix svgIcon="search"></mat-icon>
-      <input matInput type="text" formControlName="query" [value]="searchForm.query.value">
+      <input matInput type="text" formControlName="query" [value]="searchForm.query.value" test-id="search-input">
     </mat-form-field>
   </list-page-search>
 
