fix review : Keep the same variable for all eye password

--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -7,12 +7,12 @@
       type="password"
       placeholder="New Password"
       formControlName="password"
-      [type]="passwordState.new ? 'password' : 'text'"
+      [type]="hidePassword ? 'password' : 'text'"
       required
     />
-    <button type="button" matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
-      <mat-icon *ngIf="!passwordState.new" svgIcon="visibility_off"></mat-icon>
-      <mat-icon *ngIf="passwordState.new" svgIcon="visibility"></mat-icon>
+    <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+      <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
+      <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
     </button>
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
@@ -34,12 +34,12 @@
       placeholder="New Password Confirmation"
       formControlName="confirm"
       [errorStateMatcher]="passwordsMatcher"
-      [type]="passwordState.confirm ? 'password' : 'text'"
+      [type]="hidePassword ? 'password' : 'text'"
       required
     />
-    <button type="button" matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
-      <mat-icon *ngIf="!passwordState.confirm" svgIcon="visibility_off"></mat-icon>
-      <mat-icon *ngIf="passwordState.confirm" svgIcon="visibility"></mat-icon>
+    <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+      <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
+      <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
     </button>
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
