--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -105,11 +105,11 @@
             [errorStateMatcher]="currentPasswordMatch"
             required
             test-id="password"
-            [type]="passwordState.new ? 'password' : 'text'"
+            [type]="hidePassword ? 'password' : 'text'"
           />
-          <button type="button" matSuffix mat-icon-button (click)="passwordState.new = !passwordState.new" [matTooltip]="passwordState.new ? 'Show Password' : 'Hide Password'">
-            <mat-icon *ngIf="!passwordState.new" svgIcon="visibility_off"></mat-icon>
-            <mat-icon *ngIf="passwordState.new" svgIcon="visibility"></mat-icon>
+          <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+            <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
+            <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
           </button>
           <mat-hint>Between 6 and 24 characters.</mat-hint>
           <mat-error *ngIf="form.get('password').hasError('required')">
@@ -135,11 +135,11 @@
             [errorStateMatcher]="passwordsMatcher"
             required
             test-id="password-confirm"
-            [type]="passwordState.confirm ? 'password' : 'text'"
+            [type]="hidePassword ? 'password' : 'text'"
           />
-          <button type="button" matSuffix mat-icon-button (click)="passwordState.confirm = !passwordState.confirm" [matTooltip]="passwordState.confirm ? 'Show Password' : 'Hide Password'">
-            <mat-icon *ngIf="!passwordState.confirm" svgIcon="visibility_off"></mat-icon>
-            <mat-icon *ngIf="passwordState.confirm" svgIcon="visibility"></mat-icon>
+          <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+            <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
+            <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
           </button>
           <mat-hint>Please rewrite your password for confirmation.</mat-hint>
           <mat-error *ngIf="form.get('confirm').hasError('required')">
