--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -15,8 +15,7 @@
           [type]="hidePassword ? 'password' : 'text'"
         />
       <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-        <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
-        <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
+        <mat-icon [svgIcon]="hideNewPassword ? 'visibility' : 'visibility_off'"></mat-icon>
       </button>
       </mat-form-field>
       <mat-form-field appearance="outline">
@@ -32,8 +31,7 @@
           required
         />
         <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-          <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
-          <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
+          <mat-icon [svgIcon]="hideNewPassword ? 'visibility' : 'visibility_off'"></mat-icon>
         </button>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
@@ -62,8 +60,7 @@
           required
         />
         <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-          <mat-icon *ngIf="!hidePassword" svgIcon="visibility_off"></mat-icon>
-          <mat-icon *ngIf="hidePassword" svgIcon="visibility"></mat-icon>
+          <mat-icon [svgIcon]="hideNewPassword ? 'visibility' : 'visibility_off'"></mat-icon>
         </button>
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
