--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -11,7 +11,7 @@
       required
     />
     <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon [svgIcon]="hideNewPassword ? 'visibility' : 'visibility_off'"></mat-icon>
+      <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
     </button>
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
@@ -37,7 +37,7 @@
       required
     />
     <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon [svgIcon]="hideNewPassword ? 'visibility' : 'visibility_off'"></mat-icon>
+      <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
     </button>
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
