--- a/libs/movie/src/lib/movie/form/artistic/artistic.component.html
+++ b/libs/movie/src/lib/movie/form/artistic/artistic.component.html
@@ -44,6 +44,9 @@
               <textarea test-id="cast-description" matInput formControlName="description"
                 placeholder="e.g. Kate Winslet is the youngest person to acquire six Academy Award nominations, with seven nominations in total, and won the Academy Award for Best Actress for The Reader (2008)."></textarea>
               <mat-hint>Additional information about the cast member.</mat-hint>
+              <mat-error *ngIf="castForm.get('description').hasError('maxlength')">
+                Description should not exceed 500 characters.
+              </mat-error>
             </mat-form-field>
 
             <div fxLayout="column" fxLayoutAlign="start ">
@@ -130,6 +133,9 @@
               <textarea matInput test-id="crew-description" formControlName="description"
                 placeholder="e.g. Russell Carpenter shot the 1997 Best Picture-winning film Titanic, for which he won the Academy Award for Best Cinematography."></textarea>
               <mat-hint>Additional information about the crew member.</mat-hint>
+              <mat-error *ngIf="crewForm.get('description').hasError('maxlength')">
+                Description should not exceed 500 characters.
+              </mat-error>
             </mat-form-field>
 
             <div fxLayout="column" fxLayoutAlign="start">
